// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches Column with specified lg size 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  padding-right: 15px;
  padding-left: 15px;
  width: 100%;
}

@media (min-width:992px) {
  .c0 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

<div
  className="c0"
/>
`;

exports[`Styles matches Column with specified md size 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  padding-right: 15px;
  padding-left: 15px;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

<div
  className="c0"
/>
`;

exports[`Styles matches Column with specified sm size 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  padding-right: 15px;
  padding-left: 15px;
  width: 100%;
}

@media (min-width:576px) {
  .c0 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

<div
  className="c0"
/>
`;

exports[`Styles matches Column with specified xl size 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  padding-right: 15px;
  padding-left: 15px;
  width: 100%;
}

@media (min-width:1200px) {
  .c0 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

<div
  className="c0"
/>
`;

exports[`Styles matches Column with specified xs size 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  padding-right: 15px;
  padding-left: 15px;
  width: 100%;
  -webkit-flex: 0 0 50%;
  -ms-flex: 0 0 50%;
  flex: 0 0 50%;
  max-width: 50%;
}

<div
  className="c0"
/>
`;
